--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
       </div>
     </footer>
 
-    <div class="modal-overlay is-open">
+    <div class="modal-overlay ">
       <div class="modal">
         <button type="button" class="modal-close">
           <svg class="button-close" width="8" height="8">
